частично исправлено отображение ошибки в сервлете: при добавлении юзера в проект первый раз отображение идет корректно; повторное добавление того же юзера получаю NullPointerException; С удалением та же шляпа